--- a/app/assets/stylesheets/puzzles.scss
+++ b/app/assets/stylesheets/puzzles.scss
@@ -6,40 +6,43 @@
 body {
   color: $gray-900;
   background: $gray-300;
-  font-size: 16px;
 }
 
 h1 {
   background: $gray-900;
   color: $yellow;
   text-align: center;
-  margin: 1em 0px;
-  padding: 0.5em 0px;
+  margin-bottom: 2rem;
+  padding: 1rem 0;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .puzzle {
-  width: 600px;
-  height: 600px;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
   background: $gray-700;
   position: relative;
   margin: 0px auto;
-  box-sizing: content-box;
   border-collapse: collapse;
   border: 5px solid $gray-700;
 
   span {
     background: $yellow;
     border: 5px solid $gray-700;
-    display: block;
-    width: 200px;
-    height: 200px;
+    display: flex;
+    width: 33.3333%;
+    height: 33.3333%;
     position: absolute;
     left: 0px;
     top: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 3em;
-    text-align: center;
-    line-height: 200px;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
     @include transition(all 0.2s ease-in-out);
     user-select: none;
 
@@ -51,5 +54,19 @@ h1 {
       background: $gray-900;
       color: $yellow;
     }
+  }
+}
+
+.col-lg-6 {
+  margin: 1rem 0;
+}
+
+.console {
+  max-height: 500px;
+  height: 33vw;
+  overflow: auto;
+
+  p {
+    margin-bottom: 0.5rem;
   }
 }
