--- a/app/views/puzzles/show.html.erb
+++ b/app/views/puzzles/show.html.erb
@@ -1,15 +1,36 @@
 <h1>Sliding Puzzle</h1>
 
 <div
-  class="puzzle"
+  class="container"
   data-controller="puzzle"
-  data-puzzle-state-value="[2,1,3,6,4,8,7,5,9]"
+  data-puzzle-state-value="[1,2,3,4,5,6,7,8,9]"
+  data-puzzle-goal-value="[1,2,3,4,5,6,7,8,9]"
   data-puzzle-spacer-value="9"
   data-puzzle-rows-value="3"
   data-puzzle-cols-value="3"
-  data-puzzle-szpx-value="200"
 >
-  <% (1..8).each do |value| %>
-    <span data-puzzle-target="tile" data-action="click->puzzle#move"><%= value %></span>
-  <% end %>
+  <div class="row nopadding">
+    <div class="col-lg-3">
+      <h2>Controls</h2>
+      <div class="d-grid gap-2">
+        <input type="number" class="form-control" placeholder="Puzzle ID" data-puzzle-target="pid" />
+        <button class="btn btn-primary" type="button" data-action="click->puzzle#load">Load Puzzle</button>
+        <button class="btn btn-secondary" type="button" data-action="click->puzzle#random">Random Puzzle</button>
+        <button class="btn btn-info" type="button" data-action="click->puzzle#hint">Hint</button>
+        <button class="btn btn-success" type="button" data-action="click->puzzle#solve">Solve</button>
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <div class="puzzle">
+        <% (1..8).each do |value| %>
+          <span data-puzzle-target="tile" data-action="click->puzzle#move"><%= value %></span>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-lg-3">
+      <h2>Console</h2>
+      <div class="console" data-puzzle-target="console">
+      </div>
+    </div>
+  </div>
 </div>
