Remove hint button.

--- a/app/views/puzzles/show.html.erb
+++ b/app/views/puzzles/show.html.erb
@@ -16,7 +16,7 @@
         <input type="number" class="form-control" placeholder="Puzzle ID" data-puzzle-target="pid" />
         <button class="btn btn-primary" type="button" data-action="click->puzzle#load">Load Puzzle</button>
         <button class="btn btn-secondary" type="button" data-action="click->puzzle#random">Random Puzzle</button>
-        <button class="btn btn-info" type="button" data-action="click->puzzle#hint">Hint</button>
+        <!--<button class="btn btn-info" type="button" data-action="click->puzzle#hint">Hint</button>-->
         <button class="btn btn-success" type="button" data-action="click->puzzle#solve">Solve</button>
       </div>
     </div>
